--- a/CFMMCD/Content/Site.css
+++ b/CFMMCD/Content/Site.css
@@ -47,7 +47,20 @@ label {
   width: auto;
 }
 .right {
+  position:relative;
+  float: right;
   text-align: right;
+}
+.bottom {
+    position:relative;
+    bottom: 10px;
+}
+.right-fixed {
+    position: relative;
+    right: 10px;
+}
+.float {
+    position: fixed;
 }
 .form-label {
   font-family: 'Calibri Light';
@@ -95,6 +108,10 @@ label {
     margin-left: auto;
     margin-right: auto;
 }
+.center {
+    position: relative;
+    text-align:auto;
+}
 footer {
     background-color: white;
     bottom: 5px;
@@ -113,3 +130,20 @@ footer {
   }
 }
 
+.control-label{
+    max-width:300px;
+}
+.business-container{
+   min-width:150px;
+   margin-top:50px;
+   margin-left:-30px;
+}
+.tier-container {
+    max-width: 1000px;
+    margin-left: 250px;
+    margin-top: -300px;
+}
+.location-container {
+    max-width:200px;
+    margin-left:770px;
+}
