--- a/CFMMCD/Views/MenuItemMaster/MenuItemMaster.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/MenuItemMaster.cshtml
@@ -1,12 +1,15 @@
 ﻿@model CFMMCD.Models.ViewModel.MenuItemMasterViewModel
+@using CFMMCD.Models.ViewModel
 
 @{
     ViewBag.Title = "Menu Item Master";
 }
 
-<h2>Menu Item Master</h2>
-<div class="form-horizontal center">
-    @using (Html.BeginForm("Search", "MenuItemMaster", FormMethod.Post, new { } ))
+<div class="center">
+    <h2>Menu Item Master</h2>
+</div>
+<div class="form-horizontal">
+    @using (Html.BeginForm("MenuItemMaster", "MenuItemMaster", FormMethod.Post, new { }))
     {
         @Html.AntiForgeryToken()
         <div class="container-fluid">
@@ -14,7 +17,7 @@
                 <label class="form-label" for="menu-item">Menu item/ Product name</label>
             </div>
             <div class="col-lg-7">
-                @Html.TextBoxFor(m => m.SearchBox, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
                 <div class="input-group float-right" style="padding-top:8px">
                     <label class="checkbox-inline form-label">
                         @Html.CheckBoxFor(m => m.InactiveItemsCb)Show inactive items
@@ -27,32 +30,67 @@
             </div>
         </div>
     }
+
     @using (Html.BeginForm("UpdateDelete", "MenuItemMaster", FormMethod.Post, new { }))
     {
         <div class="container-fluid">
             <div class="col-lg-8">
                 <div class="col-lg-8">
 
+                    <!--NP3 and NP6 Tab-->
                     <div class="col-lg-12">
-                        <div class="col-lg-6" style="padding:0">
-                            <label class="form-label">Menu item number</label>
-                            @Html.TextBoxFor(m => m.MIMMIC, new { @class = "form-control input-sm" })
-                        </div>
-                        <div class="col-lg-6" style="padding:0">
-                            <label class="form-label">Short name</label>
-                            @Html.TextBoxFor(m => m.MIMNAM, new { @class = "form-control input-sm" })
+
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a data-toggle="tab" href="#np3">NP3</a></li>
+                            <li><a data-toggle="tab" href="#np6">NP6</a></li>
+                        </ul>
+                        <div class="tab-content" style="padding-top:10px">
+                            <!--NP3-->
+                            <div id="np3" class="tab-pane fade in active">
+                                <div class="form-group">
+                                    <div class="col-lg-6" style="padding-left:0">
+                                        <label class="form-label">Menu item number</label>
+                                        @Html.TextBoxFor(m => m.MIMMIC, new { @class = "form-control input-sm", @Value = Model.MIMMIC })
+                                    </div>
+                                    <div class="col-lg-6" style="padding:0">
+                                        <label class="form-label">Short name</label>
+                                        @Html.TextBoxFor(m => m.MIMNAM, new { @class = "form-control input-sm", @Value = Model.MIMNAM })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="form-label">Long name</label>
+                                    @Html.TextBoxFor(m => m.MIMLON, new { @class = "form-control input-sm", @Value = Model.MIMLON })
+                                </div>
+                            </div>
+                            <!--NP6-->
+                            <div id="np6" class="tab-pane fade in">
+                                <div class="form-group">
+                                    <div class="col-lg-6" style="padding-left:0">
+                                        <label class="form-label">Menu item number (NP6)</label>
+                                        @Html.TextBoxFor(m => m.MIMMIC_NP6, new { @class = "form-control input-sm", @Value = Model.MIMMIC_NP6})
+                                    </div>
+                                    <div class="col-lg-6" style="padding:0">
+                                        <label class="form-label">Short name (NP6)</label>
+                                        @Html.TextBoxFor(m => m.MIMNAM_NP6, new { @class = "form-control input-sm", @Value = Model.MIMNAM_NP6})
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label">Long name (NP6)</label>
+                                    @Html.TextBoxFor(m => m.MIMLON_NP6, new { @class = "form-control input-sm", @Value = Model.MIMLON_NP6 })
+                                </div>
+                            </div>
                         </div>
                     </div>
-
+                    <hr/>
                     <div class="col-lg-12">
                         <div class="form-group">
                             <label class="form-label">Description</label>
-                            @Html.TextBoxFor(m => m.MIMDSC, new { @class = "form-control input-sm" })
+                            @Html.TextBoxFor(m => m.MIMDSC, new { @class = "form-control input-sm", @Value = Model.MIMDSC })
                         </div>
                     </div>
 
                     <div class="col-lg-6">
-
                         <div class="form-group">
                             <label class="form-label" for="menu-item-1">PMX group</label>
                             @Html.DropDownListFor(m => m.MIMFGC, new SelectList(
@@ -63,7 +101,7 @@
                             },
                             "value",
                             "text",
-                            "0"), new { @class = "form-control input-sm" })
+                            "0"), new { @class = "form-control input-sm", @Value = Model.MIMFGC })
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="menu-item-1">PMX main group 1</label>
@@ -75,7 +113,7 @@
                             },
                             "value",
                             "text",
-                            "0"), new { @class = "form-control input-sm" })
+                            "0"), new { @class = "form-control input-sm", @Value = Model.MIMWGR })
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="menu-item-1">PMX main group 2</label>
@@ -87,7 +125,7 @@
                             },
                             "value",
                             "text",
-                            "0"), new { @class = "form-control input-sm" })
+                            "0"), new { @class = "form-control input-sm", @Value = Model.MIMHPT })
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="menu-item-1">Daypart code</label>
@@ -99,7 +137,7 @@
                             },
                             "value",
                             "text",
-                            "0"), new { @class = "form-control input-sm" })
+                            "0"), new { @class = "form-control input-sm", @Value = Model.MIMDPC })
                         </div>
                     </div>
 
@@ -117,11 +155,11 @@
                             },
                             "value",
                             "text",
-                            "0"), new { @class = "form-control input-sm" })
+                            "0"), new { @class = "form-control input-sm", @Value = Model.MIMEDT})
                         </div>
                         <div class="form-group">
                             <label class="form-label">Tax code</label>
-                            @Html.TextBoxFor(m => m.MIMUTC, new { @class = "form-control input-sm" })
+                            @Html.TextBoxFor(m => m.MIMUTC, new { @class = "form-control input-sm", @Value = Model.MIMUTC })
                         </div>
                     </div>
                 </div>
@@ -132,8 +170,8 @@
                             @Html.DropDownListFor(m => m.Location, new SelectList(
                             new List<Object>{
                                 new { value = "0" , text = "To be added after"  },
-                                new { value = "1" , text = "product mix group" },
-                                new { value = "2" , text = "implementation" }
+                                new { value = "1" , text = "Location" },
+                                new { value = "2" , text = "tier" }
                             },
                             "value",
                             "text",
@@ -143,9 +181,9 @@
                             <label class="form-label">Region</label>
                             @Html.DropDownListFor(m => m.Region, new SelectList(
                             new List<Object>{
-                                new { value = "0" , text = "To be added after"  },
-                                new { value = "1" , text = "product mix group" },
-                                new { value = "2" , text = "implementation" }
+                                new { value = "0" , text = "NCR"  },
+                                new { value = "1" , text = "REGION I" },
+                                new { value = "2" , text = "REGION II" }
                             },
                             "value",
                             "text",
@@ -155,9 +193,9 @@
                             <label class="form-label">Province</label>
                             @Html.DropDownListFor(m => m.Province, new SelectList(
                             new List<Object>{
-                                new { value = "0" , text = "To be added after"  },
-                                new { value = "1" , text = "product mix group" },
-                                new { value = "2" , text = "implementation" }
+                                new { value = "0" , text = "Batanggas"  },
+                                new { value = "1" , text = "Laguna" },
+                                new { value = "2" , text = "Quezon" }
                             },
                             "value",
                             "text",
@@ -167,9 +205,9 @@
                             <label class="form-label">City</label>
                             @Html.DropDownListFor(m => m.City, new SelectList(
                             new List<Object>{
-                                new { value = "0" , text = "To be added after"  },
-                                new { value = "1" , text = "product mix group" },
-                                new { value = "2" , text = "implementation" }
+                                new { value = "0" , text = "Batangas City"  },
+                                new { value = "1" , text = "Lucena City" },
+                                new { value = "2" , text = "Manila City" }
                             },
                             "value",
                             "text",
@@ -205,10 +243,34 @@
                         <tbody>
                             <tr>
                                 <td>Tax</td>
-                                <td>@Html.TextBoxFor(m => m.MIMTCI, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMTCA, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMNPT, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMTCG, new { @class = "form-control input-sm" })</td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.MIMTCI, new SelectList(
+                                    new List<Object>{
+                                        new { value = "01" , text = "Product" },
+                                        new { value = "02" , text = "Non-product" }
+                                    }, "value", "text", "0"), new { @class = "form-control input-sm", @Value = Model.MIMTCI })
+                                </td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.MIMTCA, new SelectList(
+                                    new List<Object>{
+                                        new { value = "01" , text = "Product" },
+                                        new { value = "02" , text = "Non-product" }
+                                    }, "value", "text", "0"), new { @class = "form-control input-sm", @Value = Model.MIMTCA })
+                                </td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.MIMNPT, new SelectList(
+                                    new List<Object>{
+                                        new { value = "01" , text = "Product" },
+                                        new { value = "02" , text = "Non-product" }
+                                    }, "value", "text", "0"), new { @class = "form-control input-sm", @Value = Model.MIMNPT })
+                                </td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.MIMTCG, new SelectList(
+                                    new List<Object>{
+                                        new { value = "01" , text = "Product" },
+                                        new { value = "02" , text = "Non-product" }
+                                    }, "value", "text", "0"), new { @class = "form-control input-sm", @Value = Model.MIMTCG })
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -230,11 +292,11 @@
                             <tr>
                                 <td>Tier A</td>
                                 <td></td>
-                                <td>@Html.TextBoxFor(m => m.MIMPRI, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMPRO, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMNPA, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMPRG, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMEDT, new { @class = "form-control input-sm", @type = "date" })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMPRI, new { @class = "form-control input-sm", @Value = Model.MIMPRI })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMPRO, new { @class = "form-control input-sm", @Value = Model.MIMPRO })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMNPA, new { @class = "form-control input-sm", @Value = Model.MIMNPA })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMPRG, new { @class = "form-control input-sm", @Value = Model.MIMPRG })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMEDT, new { @class = "form-control input-sm", @Value = Model.MIMEDT,  @type = "date" })</td>
                             </tr>
                             <tr>
                                 <td></td>
@@ -243,21 +305,15 @@
                                 <td>@Html.TextBoxFor(m => m.MIMNPO, new { @class = "form-control input-sm" })</td>
                                 <td>@Html.TextBoxFor(m => m.MIMNNP, new { @class = "form-control input-sm" })</td>
                                 <td>@Html.TextBoxFor(m => m.MIMNPD, new { @class = "form-control input-sm" })</td>
-                                <td>@Html.TextBoxFor(m => m.MIMPND, new { @class = "form-control input-sm", @type = "date" })</td>
+                                <td>@Html.TextBoxFor(m => m.MIMPND, new { @class = "form-control input-sm", @Value = Model.MIMPND, @type = "date" })</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <div class="row">
-                    <div class="form-inline">
-                        <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-                        <button type="submit" name="command" value="Delete" class="btn btn-default">Delete</button>
-                    </div>
-                </div>
             </div>
                 
             <div class="col-lg-4">
-                <label class="form-label">Recipe</label>
+                <h4>Recipe</h4>
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <table class="table table-responsive table-hover">
@@ -273,10 +329,9 @@
                 </div>
             </div>
         </div>
+        <div class="form-inline bottom float" style="right:50px">
+            <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
+            <button type="submit" name="command" value="Delete" class="btn btn-default">Delete</button>
+        </div>
     }
-</div>
-
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
