"Prepared Store profile for CRUD"

--- a/CFMMCD/Views/MenuItemMaster/MenuItemMaster.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/MenuItemMaster.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="center">
-    <h2>Menu Item Master</h2>
+    <h2>@ViewBag.Title</h2>
 </div>
 <!--Alerts-->
 <div class="container">
