--- a/CFMMCD/Views/StoreProfile/Index.cshtml
+++ b/CFMMCD/Views/StoreProfile/Index.cshtml
@@ -14,23 +14,31 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="col-lg-4">
-                    @Html.LabelFor(model => model.StoreNameNumber, "Store Name/Number", new { @class = "form-label right" })
-                </div>
-                <div class="col-lg-8">
-                    @Html.TextBoxFor(model => model.StoreNameNumber, new { @class = "form-control input-sm" })
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissable fade in">@TempData["ErrorMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
+    }
+    if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success alert-dismissable fade in">@TempData["SuccessMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
+    }
+    <div class="row">
+        <div class="col-lg-8">
             <div class="col-lg-4">
-                <button type="submit" name="command" value="Search" class="btn btn-default">Search</button>
+                @Html.LabelFor(model => model.StoreNameNumber, "Store Name/Number", new { @class = "form-label right" })
+            </div>
+            <div class="col-lg-8">
+                @Html.TextBoxFor(model => model.StoreNameNumber, new { @class = "form-control input-sm" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="col-lg-4">
+            <button type="submit" name="command" value="Search" class="btn btn-default">Search</button>
+        </div>
+    </div>
 }
-        <hr />
-@using (Html.BeginForm("SaveUpdateDelete", "StoreProfile", FormMethod.Post, new { }))
+    <hr />
+@using (Html.BeginForm("UpdateDelete", "StoreProfile", FormMethod.Post, new { }))
 {
     @Html.AntiForgeryToken()
         <div class="container">
@@ -359,7 +367,6 @@
         <div class="button-container" align="right">
             <div class="form-group">
                 <input type="submit" name="command" value="Save" class="btn btn-default" />
-                <input type="submit" name="command" value="Update" class="btn btn-default" />
                 <input type="submit" name="command" value="Delete" class="btn btn-default" />
             </div>
         </div>
