--- a/CFMMCD/Views/Shared/_Layout.cshtml
+++ b/CFMMCD/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/fonts.css" rel="stylesheet" type="text/css" />
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 </head>
