Finalized search functionality of Raw Item Master.

--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     }
                     if (UASession.RIM)
                     {
-                        <li>@Html.ActionLink("Raw Item Master", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Raw Item Master", "Index", "RawItemMaster")</li>
                     }
                     if (UASession.MER)
                     {
