--- a/CFMMCD/Content/fonts.css
+++ b/CFMMCD/Content/fonts.css
@@ -2,36 +2,36 @@
 
 @font-face {
 	font-family: 'Roboto-Light';
-	src: url('~/fonts/roboto/Roboto-Thin.eot');
-	src: url('~/fonts/roboto/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
-		url('~/fonts/roboto/Roboto-Thin.woff2') format('woff2'),
-		url('~/fonts/roboto/Roboto-Thin.woff') format('woff'),
-		url('~/fonts/roboto/Roboto-Thin.ttf') format('truetype'),
-		url('~/fonts/roboto/Roboto-Thin.svg#Roboto-Thin') format('svg');
+	src: url('../fonts/roboto/Roboto-Thin.eot');
+	src: url('../fonts/roboto/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/roboto/Roboto-Thin.woff2') format('woff2'),
+		url('../fonts/roboto/Roboto-Thin.woff') format('woff'),
+		url('../fonts/roboto/Roboto-Thin.ttf') format('truetype'),
+		url('../fonts/roboto/Roboto-Thin.svg#Roboto-Thin') format('svg');
 	font-weight: 100;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Calibri-Italic';
-	src: url('~/fonts/calibri/Calibri-LightItalic.eot');
-	src: url('~/fonts/calibri/Calibri-LightItalic.eot?#iefix') format('embedded-opentype'),
-		url('~/fonts/calibri/Calibri-LightItalic.woff2') format('woff2'),
-		url('~/fonts/calibri/Calibri-LightItalic.woff') format('woff'),
-		url('~/fonts/calibri/Calibri-LightItalic.ttf') format('truetype'),
-		url('~/fonts/calibri/Calibri-LightItalic.svg#Calibri-LightItalic') format('svg');
+	src: url('../fonts/calibri/Calibri-LightItalic.eot');
+	src: url('../fonts/calibri/Calibri-LightItalic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/calibri/Calibri-LightItalic.woff2') format('woff2'),
+		url('../fonts/calibri/Calibri-LightItalic.woff') format('woff'),
+		url('../fonts/calibri/Calibri-LightItalic.ttf') format('truetype'),
+		url('../fonts/calibri/Calibri-LightItalic.svg#Calibri-LightItalic') format('svg');
 	font-weight: 300;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('~/fonts/roboto/Roboto-Regular.eot');
-	src: url('~/fonts/roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-		url('~/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
-		url('~/fonts/roboto/Roboto-Regular.woff') format('woff'),
-		url('~/fonts/roboto/Roboto-Regular.ttf') format('truetype'),
-		url('~/fonts/roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
+	src: url('../fonts/roboto/Roboto-Regular.eot');
+	src: url('../fonts/roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/roboto/Roboto-Regular.woff2') format('woff2'),
+		url('../fonts/roboto/Roboto-Regular.woff') format('woff'),
+		url('../fonts/roboto/Roboto-Regular.ttf') format('truetype'),
+		url('../fonts/roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
