fixed button & notification

--- a/CFMMCD/Content/Site.css
+++ b/CFMMCD/Content/Site.css
@@ -128,51 +128,6 @@ footer {
     padding-left:5%;
   }
 }
-.position1{
-    position: fixed;
-    top: 150px;
-}
-.dropdown-submenu {
-    position:relative;
-}
-.dropdown-submenu>.dropdown-menu {
-    top:0;
-    left:100%;
-    margin-top:-6px;
-    margin-left:-1px;
-    -webkit-border-radius:0 6px 6px 6px;
-    -moz-border-radius:0 6px 6px 6px;
-    border-radius:0 6px 6px 6px;
-}
-.dropdown-submenu:hover>.dropdown-menu {
-    display:block;
-}
-.dropdown-submenu>a:after {
-    display:block;
-    content:" ";
-    float:right;
-    width:0;
-    height:0;
-    border-color:transparent;
-    border-style:solid;
-    border-width:5px 0 5px 5px;
-    border-left-color:#cccccc;
-    margin-top:5px;
-    margin-right:-10px;
-}
-.dropdown-submenu:hover>a:after {
-    border-left-color:#ffffff;
-}
-.dropdown-submenu.pull-left {
-    float:none;
-}
-.dropdown-submenu.pull-left>.dropdown-menu {
-    left:-100%;
-    margin-left:10px;
-    -webkit-border-radius:6px 0 6px 6px;
-    -moz-border-radius:6px 0 6px 6px;
-    border-radius:6px 0 6px 6px;
-}
 .modal {
     margin: auto;
     max-height: 80%;
@@ -198,4 +153,34 @@ footer {
     -webkit-transition-duration: 0.2s;
     -moz-transition-duration: 0.2s;
     transition-duration: 0.2s;
+}
+.position1{
+    position: fixed;
+    top: 100px;
+   
+}
+.position2{
+    margin-top: 60px;
+    margin-left: 350px;
+}
+
+.scrollable{
+    overflow: auto;
+    height: 300px;
+    width: 500px;
+}
+.scrollable-button{
+    overflow: auto;
+    height: 460px;
+}
+.size{
+    width:248px;
+}
+.popover {
+    max-width:280px;
+    margin-left:-75px;
+}
+.content-height{
+    overflow: auto;
+    height: 100px;
 }
